[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sns"
authors = [
  { name="Austin Hoover", email="hooveram@ornl.gov" },
]
version = "0.0.1"
description = "PyORBIT SNS accelerator models"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/austin-hoover/sns"
